test/sh/error/func/var_as_func.sk
# TODO(dosisod): fix functions being hoisted

x := 1

x() { noop }
